# stipend

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md  launch-post.md  policy-reference.md  quickstart.md  upgrading-to-agentrail.md
examples/hermes_skill/: README.md  carrier_payment_agent.py  policy.yaml
examples/mcp_client/: README.md  claude_desktop_config.json
examples/openclaw_skill/: README.md  policy.yaml  stipend_skill.py
stipend/: __init__.py  __main__.py  audit.py  cli.py  core.py  errors.py  mcp_server.py  policy.py  receipt.py  rendering.py
stipend/backends/: __init__.py  agentrail.py  base.py  mock.py
stipend/schemas/: __init__.py  policy.schema.json
tests/: conftest.py  test_agentrail_backend.py  test_audit.py  test_cli.py  test_core.py  test_mcp_server.py  test_mock_backend.py  test_policy.py  test_rendering.py  test_rendering_consistency.py
tests/golden/: pay_denied.txt  pay_pending.txt  pay_requires_approval.txt  pay_settled.txt  pay_settled_with_prompt.txt
