[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stipend"
version = "0.1.0"
description = "An allowance for your AI agent. Open-source MCP server and Python SDK for AI agent payment policy enforcement."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "The AgentRail team", email = "hello@agentrail.com" },
]
keywords = [
    "ai",
    "agents",
    "mcp",
    "payments",
    "policy",
    "audit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1.350",
    "ruff>=0.5",
]

[project.scripts]
stipend = "stipend.cli:app"

[project.urls]
Homepage = "https://agentrail.com"
Source = "https://github.com/agent-rail/stipend"
Issues = "https://github.com/agent-rail/stipend/issues"
"Production rails" = "https://agentrail.com"

[tool.hatch.build.targets.wheel]
packages = ["stipend"]

[tool.hatch.build.targets.wheel.force-include]
"stipend/schemas/policy.schema.json" = "stipend/schemas/policy.schema.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:jsonschema.*",
]

[tool.coverage.run]
source = ["stipend"]
omit = [
    "stipend/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pyright]
include = ["stipend"]
exclude = ["**/__pycache__", "tests"]
strict = ["stipend/core.py", "stipend/policy.py", "stipend/audit.py", "stipend/rendering.py", "stipend/backends/base.py", "stipend/backends/mock.py", "stipend/backends/agentrail.py"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
